\Add all images and public assets - Fix image loading issues by adding veterinary and review photos\

--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,8 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public - Allow public directory for Next.js static files
+# public
 
 # Storybook build outputs
 .out
